INT-172 Enable Pause/Resume Synchronization menu options for SWP product and mapping category (PBI, Task, Product, Release, MetaData) context menus.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3634 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -279,6 +279,18 @@
                id="com.collabnet.ccf.actions.RefreshAction">
          </action>
          <action
+               label="Resume synchronization"
+               class="com.collabnet.ccf.actions.ResumeSynchronizationAction"
+               menubarPath="group.c"
+               id="com.collabnet.ccf.actions.ResumeSynchronizationAction">
+         </action>          
+         <action
+               label="Pause synchronization"
+               class="com.collabnet.ccf.actions.PauseSynchronizationAction"
+               menubarPath="group.c"
+               id="com.collabnet.ccf.actions.PauseSynchronizationAction">
+         </action>                                             
+         <action
                label="Delete project mappings"
                class="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction"
                menubarPath="group.d"
