ccf369 - Improved handling of "hidden" project mappings (delete them when all mappings are          deleted for product, never reesume them). ccf370 - Improved UI for last page of Map Projects wizard. ccf371 - Decorate (font & hospital count) project mapping groups. ccf374 - Test Connection button in Landscape editor (so far only implemented for TeamForge connection)
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3691 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -202,7 +202,20 @@
                class="com.collabnet.ccf.actions.DeleteIdentityMappingAction"
                id="com.collabnet.ccf.actions.DeleteIdentityMappingAction">
          </action>                                                                         
-      </objectContribution>      
+      </objectContribution> 
+      
+      <objectContribution
+            objectClass="com.collabnet.ccf.model.MappingGroup"
+            id="com.collabnet.ccf.model.MappingGroup">                   
+         <action
+               label="Show Hospital"
+               class="com.collabnet.ccf.actions.HospitalAction"
+               enablesFor="1"
+               menubarPath="group.a"
+               icon="icons/hospitalView.gif"
+               id="com.collabnet.ccf.actions.HospitalAction">
+         </action>
+      </objectContribution>           
       
       <objectContribution
             objectClass="com.collabnet.ccf.model.Landscape"
