ccf422 - Add option to Landscape and Project Mappings context menus to upgrade TF-SWP integration trackers to 5.4 layout.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3832 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.teamforge_sw/plugin.xml
+++ b/com.collabnet.ccf.teamforge_sw/plugin.xml
@@ -31,6 +31,11 @@
 		</command>
 		<command
 	        categoryId="com.collabnet.ccf.teamforge_sw.commands"
+	        id="com.collabnet.ccf.teamforge_sw.commands.upgradeTo54"
+	        name="Upgrade TeamForge Trackers to 5.4 layout">
+		</command>		
+		<command
+	        categoryId="com.collabnet.ccf.teamforge_sw.commands"
 	        id="com.collabnet.ccf.teamforge_sw.commands.fixTrackers"
 	        name="Fix TeamForge Trackers">
 		</command>		
@@ -93,6 +98,19 @@
 	             </and>
 	          	</visibleWhen>
 	        </command>
+	        <command
+	             commandId="com.collabnet.ccf.teamforge_sw.commands.upgradeTo54"
+	             label="Upgrade TeamForge Trackers to 5.4 layout..."
+	             style="push">
+	        	<visibleWhen
+	                checkEnabled="true">
+	             <and>
+	                <count
+	                      value="1">
+	                </count>  
+	             </and>
+	          	</visibleWhen>
+	        </command>	        
 	    </menuContribution>
 	 	<menuContribution
 	          locationURI="popup:org.eclipse.ui.popup.any?after=additions">
@@ -235,6 +253,21 @@
    
     <extension
        point="org.eclipse.ui.handlers">
+     <handler
+          class="com.collabnet.ccf.teamforge_sw.UpgradeTo54Handler"
+          commandId="com.collabnet.ccf.teamforge_sw.commands.upgradeTo54">
+       <enabledWhen>
+          <iterate>
+              <and>
+                <test
+                	  forcePluginActivation="true"
+                      property="com.collabnet.ccf.teamforge_sw.isTeamForgeSwpLandscape"
+                      value="true">
+                </test>                                    
+			 </and>
+          </iterate>
+       </enabledWhen>
+    </handler>       
      <handler
           class="com.collabnet.ccf.teamforge_sw.MapProjectsHandler"
           commandId="com.collabnet.ccf.teamforge_sw.commands.mapProjects">
