New "Enable advanced project mapping wizard options" preference conditions whether or not Quality Center project/requirementType browse buttons are visible, whether or not Quality Center project/requirementType are validated, and whether or not there is a one second delay before releasing COM resources.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@4281 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.qc/plugin.xml
+++ b/com.collabnet.ccf.qc/plugin.xml
@@ -14,5 +14,20 @@
             id="com.collabnet.ccf.qc.QualityCenterCcfParticipant">
       </participant>               
    </extension>
+   
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer class="com.collabnet.ccf.qc.preferences.QualityCenterPreferenceInitializer"/>
+   </extension>   
+   
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            name="Quality Center Integration"
+            category="com.collabnet.ccf.preferences"
+            class="com.collabnet.ccf.qc.preferences.QualityCenterPreferencesPage"
+            id="com.collabnet.ccf.qc.preferences.QualityCenterPreferencesPage">
+      </page>
+   </extension>        
 
 </plugin>
