--- a/com.collabnet.ccf.migration/.settings/org.eclipse.jdt.core.prefs
+++ b/com.collabnet.ccf.migration/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,8 @@
-#Mon Feb 14 11:01:52 PST 2011
+#Mon Sep 26 09:59:44 EDT 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
-org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.6
+org.eclipse.jdt.core.compiler.source=1.5
