--- a/com.collabnet.ccf.tfs/.classpath
+++ b/com.collabnet.ccf.tfs/.classpath
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/joda-time-1.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-r09.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl-2.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jersey-apache-client-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jersey-client-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jersey-core-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jersey-json-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jersey-multipart-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jira-rest-java-client-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.codehaus.jettison-jettison-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/regexp-1.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
