--- a/com.collabnet.ccf.tfs/build.properties
+++ b/com.collabnet.ccf.tfs/build.properties
@@ -9,6 +9,17 @@ bin.includes = META-INF/,\
                about.ini,\
                about.properties,\
                cn_icon.png,\
-               lib/com.microsoft.tfs.sdk-10.1.0.jar
+               lib/com.microsoft.tfs.sdk-10.1.0.jar,\
+               lib/guava-r09.jar,\
+               lib/jaxb-impl-2.2.3.jar,\
+               lib/jersey-apache-client-1.5.jar,\
+               lib/jersey-client-1.5.jar,\
+               lib/jersey-core-1.5.jar,\
+               lib/jersey-json-1.5.jar,\
+               lib/jersey-multipart-1.5.jar,\
+               lib/jira-rest-java-client-1.0.jar,\
+               lib/org.codehaus.jettison-jettison-1.1.jar,\
+               lib/regexp-1.3.jar,\
+               lib/joda-time-1.5.2.jar
 jars.compile.order = .
 jars.extra.classpath = lib/com.microsoft.tfs.sdk-10.1.0.jar
