--- a/com.collabnet.ccf.rqp.feature/.project
+++ b/com.collabnet.ccf.rqp.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.collabnet.ccf.qc.feature</name>
+	<name>com.collabnet.ccf.rqp.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
