RQP Plugin development Renaming all references to QC Deleting jars related to QC Adding jars and dll's used by RQP
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/CCF2RQP/gui@5602 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.rqp/build.properties
+++ b/com.collabnet.ccf.rqp/build.properties
@@ -2,12 +2,16 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               jacob-1.14.3-x64.dll,\
-               jacob-1.14.3-x86.dll,\
+               RJCB.dll,\
                lib/,\
                icons/,\
                plugin.xml,\
                about.html,\
                about.ini,\
                about.properties,\
-               cn_icon.png
+               cn_icon.png,\
+               lib/RJCB.jar,\
+               lib/proxies.jar
+jars.extra.classpath = lib/RJCB.jar,\
+                       lib/proxies.jar
+               
