--- a/com.collabnet.ccf.rqp/.project
+++ b/com.collabnet.ccf.rqp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.collabnet.ccf.qc</name>
+	<name>com.collabnet.ccf.rqp</name>
 	<comment></comment>
 	<projects>
 	</projects>
